fix modal center alignment

--- a/repos/web/style/modal.less
+++ b/repos/web/style/modal.less
@@ -8,9 +8,11 @@
   &.active {
     &:extend(.flex--fill all);
     &:extend(.position-fill all);
-    &:extend(.align-center all);
     &:extend(.bg-shadow-darker all);
     &:extend(.fade-in-fast all);
+    //&:extend(.align-center all); // this causes more troubles than its worth
+    justify-content: center;
+    align-items: center;
     z-index: 9999; // navbar z-index is 1000
 
     .app__modal__box {
